Task Completed with dynamic dirtctory pass

--- a/Challenge_Data_Analyst_Abhinav_Pareek.ipynb
+++ b/Challenge_Data_Analyst_Abhinav_Pareek.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,142 +353,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<ipython-input-213-7b431246f116>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if directory is '' or None:\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   Result Drawing_Index Drawing_Type DP_Number  \\\n",
-      "0    Res0001_AC_4_ETZ_001            AC          ETZ       001   \n",
-      "1    Res0002_AC_0_RTZ_001            AC          RTZ       001   \n",
-      "2    Res0003_AL_6_RTZ_001            AL          RTZ       001   \n",
-      "3    Res0004_AB_4_GEZ_001            AB          GEZ       001   \n",
-      "4    Res0005_AG_0_RTZ_001            AG          RTZ       001   \n",
-      "5    Res0006_AC_4_ETZ_001            AC          ETZ       001   \n",
-      "6    Res0007_AF_0_RTZ_001            AF          RTZ       001   \n",
-      "7    Res0008_AB_0_RTZ_001            AB          RTZ       001   \n",
-      "8    Res0009_AD_3_RTZ_001            AD          RTZ       001   \n",
-      "9    Res0010_AC_0_RTZ_001            AC          RTZ       001   \n",
-      "10   Res0011_AC_0_RTZ_001            AC          RTZ       001   \n",
-      "11   Res0012_AD_0_RTZ_001            AD          RTZ       001   \n",
-      "12   Res0013_AC_2_ETZ_001            AC          ETZ       001   \n",
-      "13   Res0014_AF_0_RTZ_001            AF          RTZ       001   \n",
-      "14   Res0015_AC_0_RTZ_001            AC          RTZ       001   \n",
-      "15   Res0016_AH_0_RTZ_001            AH          RTZ       001   \n",
-      "16            Res0017___b                                        \n",
-      "17   Res0018_AE_5_RTZ_001            AE          RTZ       001   \n",
-      "18   Res0019_AE_1_ETZ_001            AE          ETZ       001   \n",
-      "19   Res0020_AC_0_RTZ_001            AC          RTZ       001   \n",
-      "20     Res0021_RA69825186                                        \n",
-      "21   Res0022_AG_4_ETZ_001            AG          ETZ       001   \n",
-      "22   Res0023_AD_1_ETZ_001            AD          ETZ       001   \n",
-      "23  Res0024_AC_23_ETZ_001            AC          ETZ       001   \n",
-      "\n",
-      "                          Drawing_Id  Weight  Dimension_Type_Nominal_Count  \\\n",
-      "0                           10011234                                  79.0   \n",
-      "1                          R10022345  16.172                         114.0   \n",
-      "2                              0.893   0.900                          32.0   \n",
-      "3                         RA10043456                                  85.0   \n",
-      "4                  Typ-Nr.\\nKenn-Nr.                                  32.0   \n",
-      "5                         1.5 0DFF E                                  16.0   \n",
-      "6   Index\\n01465\\n251.20.01.00\\nf\\nI                                  36.0   \n",
-      "7                  Typ-Nr.\\nKenn-Nr.                                  16.0   \n",
-      "8                          1009R6789                                  65.0   \n",
-      "9                          1010R1357                                  88.0   \n",
-      "10                                                                    24.0   \n",
-      "11                        R1012_4567   3.397                          23.0   \n",
-      "12                       RA1013_8910                                 114.0   \n",
-      "13     Index\\n0R1014 400.20.67.00\\nF                                  32.0   \n",
-      "14                                                                   116.0   \n",
-      "15               Typ-Nr\\nKenn-Nr.\\n7                                  24.0   \n",
-      "16                      N du\\n0R0017                                 125.0   \n",
-      "17                          47.00.00  10.320                          38.0   \n",
-      "18                        RA10198967                                  13.0   \n",
-      "19               Typ-Nr\\nKenn-Nr.\\n8                                  29.0   \n",
-      "20      N° du\\n/Index\\nRES RA1021 AA                                  17.0   \n",
-      "21                                                                    63.0   \n",
-      "22                      RA1023_12345                                  41.0   \n",
-      "23                                                                   141.0   \n",
-      "\n",
-      "   Dimension_Type_Nominal_Tolerance  Dimension_Type_Round_Count  \\\n",
-      "0                               IT8                        13.0   \n",
-      "1                              IT15                         6.0   \n",
-      "2                              IT15                         6.0   \n",
-      "3                              IT13                         7.0   \n",
-      "4                              IT15                         7.0   \n",
-      "5                              IT11                         5.0   \n",
-      "6                                                           6.0   \n",
-      "7                              IT16                         2.0   \n",
-      "8                              IT13                        14.0   \n",
-      "9                              IT15                         2.0   \n",
-      "10                                                          4.0   \n",
-      "11                             IT15                         6.0   \n",
-      "12                             IT12                        15.0   \n",
-      "13                             IT15                         8.0   \n",
-      "14                             IT12                        10.0   \n",
-      "15                                                          6.0   \n",
-      "16                              IT3                        14.0   \n",
-      "17                             IT13                         3.0   \n",
-      "18                             IT14                         8.0   \n",
-      "19                                                          2.0   \n",
-      "20                              0.2                         0.0   \n",
-      "21                             IT16                         5.0   \n",
-      "22                              IT7                         0.0   \n",
-      "23                              IT8                        16.0   \n",
-      "\n",
-      "   Dimension_Type_Round_Tolerance  View_Count  Inclined_Drilling_Count  \\\n",
-      "0                            IT14          13                        8   \n",
-      "1                                          12                        3   \n",
-      "2                                           7                        3   \n",
-      "3                             5.0          20                        4   \n",
-      "4                            IT15           8                        2   \n",
-      "5                            IT13           6                        2   \n",
-      "6                            IT15           6                        5   \n",
-      "7                            IT18           6                        1   \n",
-      "8                            IT14           7                        8   \n",
-      "9                                          11                        0   \n",
-      "10                           IT15           5                        1   \n",
-      "11                           IT15           5                        2   \n",
-      "12                           IT14          20                        7   \n",
-      "13                           IT12           5                        3   \n",
-      "14                                         15                        6   \n",
-      "15                                          8                        4   \n",
-      "16                                         19                        9   \n",
-      "17                           IT13           7                        0   \n",
-      "18                            IT8           5                        1   \n",
-      "19                                         11                        1   \n",
-      "20                              0           5                        0   \n",
-      "21                           IT16          10                        3   \n",
-      "22                              0           9                        0   \n",
-      "23                                         17                       12   \n",
-      "\n",
-      "                             Inclined_Drilling_Values  \n",
-      "0                 40, 33, 30, 23, 1.9, 6 +0.5/0, 6, 6  \n",
-      "1                                      138, 104, 10.4  \n",
-      "2                                           17, 34, 3  \n",
-      "3                                10 +5/0, (24), 28, 8  \n",
-      "4                                              23, 15  \n",
-      "5                  8.5 +0.15/-0.05, 8.7 H13 (+0.22/0)  \n",
-      "6          50.5 +0.3/-0.6, 10, 25.9 +0.6/-0.3, 25, 19  \n",
-      "7                                             32 ±1.3  \n",
-      "8   40.5 +0.5/0, 25, 25, (25), 40.5 +0.5/0, 5, 8.3, 6  \n",
-      "9                                                      \n",
-      "10                                                  9  \n",
-      "11                                             12, 85  \n",
-      "12                 13.1, 3, 24 0/-0.5, 30, 21, 16, 30  \n",
-      "13                                       3.2, 21, 138  \n",
-      "14                       8.2, 25, 140, 116, (823), 92  \n",
-      "15                                 40, 44, 13.4, 14.6  \n",
-      "16                3, 24, 16, 1.3, 1.3, 15, 24, 2, 1.3  \n",
-      "17                                                     \n",
-      "18                               12x 11 H13 (+0.27/0)  \n",
-      "19                                                107  \n",
-      "20                                                     \n",
-      "21                                    22, 22 +1/0, 11  \n",
-      "22                                                     \n",
-      "23       38, 33, 17, 14, 20, 20, 32, 20, 10, 6, 7, 27  \n"
+      "Enter directory path:D:\\My doc\\ImportantDoc\\Task\\Challenge_and_Instructions_Workstudent_Data_Analyst\\Challenge_and_Instructions_Workstudent_Data_Analyst\\Results_Task_edited\n"
      ]
     }
    ],
@@ -496,7 +378,10 @@
     "def main():\n",
     "    # directory path mentioned\n",
     "    # try to ad dynamic path parsing\n",
-    "    directory = 'D:\\My doc\\ImportantDoc\\Task\\Challenge_and_Instructions_Workstudent_Data_Analyst\\Challenge_and_Instructions_Workstudent_Data_Analyst\\Results_Task_edited'\n",
+    "    directory = input(\"Enter directory path:\")# pass directory path upto ...\\Results_Task_edited\n",
+    "    if directory is '' or None:\n",
+    "        # set hard coded directory path\n",
+    "        directory='D:\\My doc\\ImportantDoc\\Task\\Challenge_and_Instructions_Workstudent_Data_Analyst\\Challenge_and_Instructions_Workstudent_Data_Analyst\\Results_Task_edited'\n",
     "    process_file(directory)\n",
     "        \n",
     "if __name__=='__main__':\n",
